cpat-blog-bff/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cpat-blog-bff-deployment
    app.kubernetes.io/component: cpat-blog-bff-deployment
    app.kubernetes.io/instance: cpat-blog-bff-deployment
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: cpat-blog
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 10-SCL
    version: v1
  name: cpat-blog-bff-deployment
spec:
  selector:
    matchLabels:
      app: cpat-blog
      version: v1
  template:
    metadata:
      labels:
        app: cpat-blog
        version: v1
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/cpat-blog/cpat-blog-bff
          imagePullPolicy: Always
          name: bff
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
