cpat-blog-bff/yamls/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cpat-blog-bff
  name: cpat-blog-bff
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cpat-blog-bff
    weight: 100
